--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,10 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+    <ul>
+      <% for(var i = 0; i < messages.length; i++) { %>
+        <li><%= messages[i].text %></li>
+      <% } %>
+    </ul>
   </body>
 </html>
